errores arreglados